2008-01-24 Jim Garlick <garlick@llnl.gov>

	* powerman.spec : BuildRequires changes:
	- change tcp_wrappers-devel to tcp_wrappers for RHEL 5
	- add readline-devel

	* : tag powerman-1.0.32

2007-12-10 Jim Garlick <garlick@llnl.gov>

	* etc/swpdu.dev : New, for APPRO PDU. [Trent D'Hooge]

2007-12-04 Jim Garlick <garlick@llnl.gov>

	* etc/apcpdu3.dev : Make query response tolerant of configurable 
	plug name strings [Trent D'Hooge]

2007-11-26 Jim Garlick <garlick@llnl.gov>

	* src/httppower.c : New httppower daemon for HTTP based power controllers.

	* etc/dli.dev : Support for Digital Loggers, Inc. power controllers.

2007-11-21 Jim Garlick <garlick@llnl.gov>

	* etc/apcpdu3.dev : New apc variant for new firmware [Trent D'Hooge]

2007-10-20 Jim Garlick <garlick@llnl.gov>

	* etc/ilom-inline.dev : Add support for Sun ILOM over system console.

	* man/powerman-devices.7 : Fix typo in cyclades section.

	* scripts/build : Remove, also rpm targets in Makefile.

	* : tag powerman-1.0.31

2007-10-05 Jim Garlick <garlick@llnl.gov>

	* powerman.spec : Add BuildRequries for bison.

	* src/parse.lex : Consider \r to be white space.

	* : tag powerman-1.0.30

2007-09-06 Albert Chu <chu11@llnl.gov>

	* etc/ipmipower.dev: Modify cycle/reset to use off and on.

	* man/powerman-devices.7: Adjust text appropriately for changes.
	
	* : tag powerman-1.0.29

2007-06-19 Jim Garlick <garlick@llnl.gov>

	* powerman.spec : Add flex to BuildRequires.

2007-06-13 Jim Garlick <garlick@llnl.gov>

	* scripts/build : Build .src.rpm and append %{?dist} to Release.

2007-05-07 Jim Garlick <garlick@llnl.gov>

	* etc/*.dev : Raise cycle and cycle_all delays from 2 sec to 4 sec
	to accomodate power supplies that take a while to bleed off.

	* : tag powerman-1.0.28

2007-04-24 Jim Garlick <garlick@llnl.gov>

	* Makefile : Added rpms-working, rpms-trunk, rpms-release, tagrel 
	targets.

	* ChangeLog : Unexpand tabs to unconfuse vim syntax coloring.

	* : tag powerman-1.0.27
